# spl

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md
.github/workflows/: ci.yml
docs/: architecture.md  self-host.md  signing-keys.md
home/: Makefile  README.md  pyproject.toml
home/src/spl/: __init__.py
home/src/spl/home/: __init__.py  __main__.py  app.py  auth.py  ca.py  config.py  framing.py  mux.py  nonces.py  pair_server.py  relay_client.py  tcp_pipe.py  tls_adapter.py
home/tests/: test_app.py  test_auth.py  test_ca.py  test_framing.py  test_mux.py  test_nonces.py  test_pair_retire.py  test_smoke.py
ios/: README.md
mobile/: Makefile  README.md  biome.json  package.json  tsconfig.json
mobile/src/: _csr_internal.ts  crockford32.ts  device_token.ts  dial.ts  framing.ts  http_client.ts  index.ts  mux.ts  pair.ts  pair_direct.ts  pair_relay.ts  qr_link.ts  spki.ts
mobile/tests/: device_token.test.ts  enroll_body.test.ts  framing.test.ts  pair_csr.test.ts  pair_guard.test.ts  pair_test_helpers.ts  qr_link.test.ts  spki.test.ts  wire_compat.test.ts
proto/: README.md  framing.md  pair-window.md  pairing.md  session.md  tokens.md
relay/: Makefile  README.md  biome.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts  vitest.workers.config.ts  vitest.workers.gate.config.ts  vitest.workers.presence.config.ts  wrangler.toml
relay/migrations/: 0001_init.sql  0002_devices_add_device_id.sql  0003_rename_account_token_jti.sql  (+4 more)
solcf/: Makefile  README.md  package.json  tsconfig.json  wrangler.toml
(+34 files in other folders)
